# opensomeip-gateways

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
common/: CMakeLists.txt
common/include/opensomeip/gateway/: config.h  gateway_base.h  translator.h
common/src/: config.cpp  gateway_base.cpp  translator.cpp
common/tests/: test_config.cpp  test_gateway_base.cpp  test_translator.cpp
docs/: ADDING_A_GATEWAY.md  BUILD.md  CODING_GUIDELINES.md  SUPPORTED_PLATFORMS.md
docs/architecture/: gateway-architecture.md
gateway-dbus/: CMakeLists.txt  README.md
gateway-dbus/examples/: CMakeLists.txt  dbus_config.yaml  dbus_system_bridge.cpp
gateway-dbus/include/opensomeip/gateway/dbus/: dbus_gateway.h  dbus_translator.h
gateway-dbus/src/: dbus_gateway.cpp  dbus_translator.cpp
gateway-dbus/tests/: test_dbus_gateway.cpp
gateway-dds/: CMakeLists.txt  README.md
gateway-dds/examples/: CMakeLists.txt  dds_adaptive_bridge.cpp  dds_config.yaml
gateway-dds/idl/: vehicle_data.idl
gateway-dds/include/opensomeip/gateway/dds/: dds_gateway.h  dds_translator.h
gateway-dds/src/: dds_gateway.cpp  dds_translator.cpp
gateway-dds/tests/: test_dds_gateway.cpp
gateway-grpc/: CMakeLists.txt  README.md
gateway-grpc/examples/: CMakeLists.txt  grpc_config.yaml  grpc_digital_twin.cpp
gateway-grpc/include/opensomeip/gateway/grpc/: grpc_config.h  grpc_gateway.h  grpc_translator.h
gateway-grpc/protos/: gateway.proto
gateway-grpc/src/: grpc_gateway.cpp  grpc_translator.cpp
gateway-grpc/tests/: test_grpc_gateway.cpp
gateway-iceoryx2/: CMakeLists.txt  README.md
gateway-iceoryx2/examples/: CMakeLists.txt  iceoryx2_bridge_example.cpp  iceoryx2_config.yaml
gateway-iceoryx2/include/opensomeip/gateway/iceoryx2/: iceoryx2_gateway.h  iceoryx2_translator.h
gateway-iceoryx2/src/: iceoryx2_gateway.cpp  iceoryx2_translator.cpp
gateway-iceoryx2/tests/: test_iceoryx2_gateway.cpp
gateway-mqtt/: CMakeLists.txt  README.md
gateway-mqtt/examples/: CMakeLists.txt  mqtt_config.yaml  mqtt_vehicle_telemetry.cpp
gateway-mqtt/include/opensomeip/gateway/mqtt/: mqtt_gateway.h  mqtt_translator.h
gateway-mqtt/src/: mqtt_gateway.cpp  mqtt_translator.cpp
gateway-mqtt/tests/: test_mqtt_gateway.cpp
gateway-ros2/: CMakeLists.txt  README.md
gateway-ros2/examples/: CMakeLists.txt  ros2_adas_bridge.cpp  ros2_config.yaml
gateway-ros2/include/opensomeip/gateway/ros2/: ros2_gateway.h  ros2_translator.h
gateway-ros2/src/: ros2_gateway.cpp  ros2_translator.cpp
gateway-ros2/tests/: test_ros2_gateway.cpp
gateway-zenoh/: CMakeLists.txt  README.md
gateway-zenoh/examples/: CMakeLists.txt  zenoh_config.yaml  zenoh_edge_bridge.cpp
gateway-zenoh/include/opensomeip/gateway/zenoh/: zenoh_gateway.h  zenoh_translator.h
gateway-zenoh/src/: zenoh_gateway.cpp  zenoh_translator.cpp
gateway-zenoh/tests/: test_zenoh_gateway.cpp
